# console-codes-rs

./: Cargo.toml  README.md
examples/: hello.rs  rgb24.rs
src/: color.rs  csi.rs  lib.rs  mode.rs  privmode.rs  sgr.rs
tests/: csi.rs
